--- a/Documentation/documentation.html
+++ b/Documentation/documentation.html
@@ -187,11 +187,11 @@
                   <a href="../examples/landing.html" class="dropdown-item"
                     >Landing</a
                   >
-                  <a href="../examples/profile.html" class="dropdown-item"
-                    >Profile</a
+                  <a href="../examples/Bibliography.html" class="dropdown-item"
+                    >Bibliography</a
                   >
-                  <a href="../examples/login.html" class="dropdown-item"
-                    >Login</a
+                  <a href="../examples/Econ.html" class="dropdown-item"
+                    >Econ</a
                   >
                   <a href="../examples/register.html" class="dropdown-item"
                     >Register</a
